--- a/todo.html
+++ b/todo.html
@@ -13,6 +13,22 @@
 		<title>To Do</title>
 	</head>
 	<body>
+		<!-- <div id="login">
+			<form>
+				<input type="text" name="username" placeholder="Username" />
+				<input type="password" name="password" placeholder="Password" />
+				<button type="submit">Login</button>
+			</form>
+		</div> -->
+
+		<!-- <div id="register">
+			<form>
+				<input type="text" name="username" placeholder="Username" />
+				<input type="password" name="password" placeholder="Password" />
+				<button type="submit">Register</button>
+			</form>
+		</div> -->
+
 		<div id="container">
 			<div id="menu">
 				<div>
